<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UWallet</string>
    <string name="action_settings">Settings</string>
    <string name="username_prompt">Student Number</string>
    <string name="password_prompt">PIN</string>
    <string name="login_button">Login</string>
    <string name="meal_plan">Meal Plan:</string>
    <string name="flex_dollars">Flex Dollars:</string>
    <string name="total">Total:</string>
    <string name="balance">Balance</string>
    <string name="about_names">Made by Seikun Kambashi, Scott So, Gabriel Wong, Jessica Wu and Andy Zhang. </string>
    <string name="error_connection_failed">Connection error</string>
    <string name="watcard_sync_label">WatCard</string>
    <string name="watcard_sync_description">Connect to WatCard servers to get balance and transaction information.</string>
    <string name="watcard_sync_process">:sync</string>
    <string name="error_incorrect_credentials">Invalid username or password</string>
    <string name="unknown">Loading</string>
	<string name="empty_transaction_message">Loading transactions&#8230;</string>
	<string name="balance_button">Balance</string>
	<string name="transactions_button">Transactions</string>
	<string name="statistics_button">Statistics</string>
	<string name="logout_button">Logout</string>
    
	<color name="background">#27282B</color>
	<color name="balanceBackground">#1485CC</color>
	<color name="balanceBackground_click">#0C537F</color>
	<color name="transactionsBackground">#CC4A14</color>
	<color name="transactionsBackground_click">#7F2E0C</color>
	<color name="statisticsBackground">#70CCAF</color>
	<color name="statisticsBackground_click">#467F6D</color>
	<color name="logoutBackground">#FFC01E</color>
	<color name="logoutBackground_click">#7F600F</color>
	
	<string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
	
	<string-array name="options_array">
        <item>Balance</item>
        <item>Transactions</item>
        <item>Statistics</item>
        <item>Logout</item>
    </string-array>
	
	
</resources>