<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center" >

        <TextView
            android:id="@+id/custom_font"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:text="@string/balance_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="50sp" >
        </TextView>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:src="@drawable/balance_bal" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center" >

        <TextView
            android:id="@+id/custom_font1"
           	style="@style/TextView"
            android:text="@string/meal_plan" />

        <TextView
            android:id="@+id/meal_plan_variable"
           	style="@style/TextView"
            android:layout_gravity="center" />
        
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/custom_font2"
           	style="@style/TextView"
            android:text="@string/flex_dollars"
             />

        <TextView
            android:id="@+id/flex_dollars_variable"
            	style="@style/TextView"
            android:layout_gravity="center"
            />
    
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/custom_font3"
            style="@style/TextView"
            android:text="@string/total"
            />

        <TextView
            android:id="@+id/total_variable"
           	style="@style/TextView"
            android:gravity="center"
             />
    </TableRow>

</TableLayout>